Changed: Updated thcrap interaction to be compatible with the 2019-10-05 update. You may need to set your thcrap_loader path again.
Changed: You can now set arbitrary names for game profile IDs as long as they don't start with "th".
Changed: Enlarged the custom games list.
Changed: Upgraded to Visual Studio 2017 from 2012. Hopefully shouldn't change anything.

1.0-pre3 (13/08/2019)
Added: Selected patches list to show the order of installed patches.
Added: Touhou 17 support.
Added: Dependency search for patches.
Changed: You can now resize the window to  smaller size than default. (buggy at the moment)
Changed: Updates to the patch repositories are shown in real time.
Fixed: Appdata/Replay folder being undetectable.
Fixed: Infinite loop when searching for thcrap repositories.
Fixed: local repositories having higher priority than thcrap.

1.0-pre2 (18/04/2019)
Added: thcrap Profile Editor. Lets you select patches from a list and configure the game list manually. The repository search starts at a configurable Url. Offline-only builds will also be released without this feature from now on.
Added: Customizable text color for buttons + the ability to disable the text or banner entirely.
Added: Saved states for the random games list.
Changed: Custom game categories no longer save their key name in the config (hopefully since they are no longer needed).
Changed: The File Select Dialog will now start from the last place a file was selected.
Changed: Custom banners now stretch to fit the button.
Changed: The settings in the settings tab will now only save when switching tabs or closing the program.
Fixed: Background pictures for games being one pixel off.
Fixed: Double Dealing Character typo.
Fixed: Custom banner checkbox not saving.
Fixed: Tab order for the controls.
Fixed: Tray icon's custom games list adding games to their parent category.
Fixed: Not changing the name while renaming custom games/categories would result in an error.