@@ -346,7 +346,8 @@ namespace Touhou_Launcher
             minimizeToTray.Checked = curCfg.minimizeToTray;
             showTray.Checked = curCfg.showTray;
             np2Dir.Text = curCfg.np2Dir;
-            crapDir.Text = curCfg.crapDir + "\\bin\\thcrap_loader.exe";
+            if (curCfg.crapDir != "")
+                crapDir.Text = curCfg.crapDir + "\\bin\\thcrap_loader.exe";
             foreach (CheckBox chk in GetAll(randomSettings, typeof(CheckBox)))
             {
                 chk.CheckedChanged -= chkRandom_CheckedChanged;
@@ -985,7 +986,8 @@ namespace Touhou_Launcher
             {
                 ((TextBox)sender).BackColor = SystemColors.Window;
                 curCfg.np2Dir = np2Dir.Text;
-                curCfg.crapDir = Path.GetDirectoryName(crapDir.Text).TrimEnd("\\bin".ToCharArray());
+                string crapPath = crapDir.Text == "" ? "" : Path.GetDirectoryName(crapDir.Text);
+                curCfg.crapDir = Directory.Exists(crapPath + "\\bin") ? crapPath : crapPath.TrimEnd("\\bin".ToCharArray());
             }
             else
                 ((TextBox)sender).BackColor = Color.Red;
