@@ -7,6 +7,7 @@ Changed: Updated thcrap interaction to be compatible with the 2019-10-05 update.
 Changed: You can now set arbitrary names for game profile IDs as long as they don't start with "th".
 Changed: Enlarged the custom games list.
 Changed: Upgraded to Visual Studio 2017 from 2012. Hopefully shouldn't change anything.
+Changed: Required thcrap directories will now be created automatically if they do not exist.
 
 1.0-pre3 (13/08/2019)
 Added: Selected patches list to show the order of installed patches.
